// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the details for a manager 1`] = `
<div
  className="DetailView-root-1"
>
  <div>
    <a
      href="/"
      onClick={[Function]}
      rel="noopener noreferrer"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-3"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
    </a>
  </div>
  <div>
    <h2
      className="DetailView-title-2"
    >
      Manager
    </h2>
  </div>
</div>
`;

exports[`renders the details for an individual contributor 1`] = `
<div
  className="DetailView-root-1"
>
  <div>
    <a
      href="/"
      onClick={[Function]}
      rel="noopener noreferrer"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-3"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
    </a>
  </div>
  <div>
    <h2
      className="DetailView-title-2"
    >
      Someone
    </h2>
  </div>
</div>
`;
